Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2988

ats_speed: bail out when gurl->IsWebValid() != true

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.1.0
    • Plugins
    • None

    Description

      Reported via https://github.com/We-Amp/ats_speed/issues/12

      Prevent a CHECK failure by bailing out on urls that apparently can't be parsed as web valid. Preferrably should emit a warning about it as well, as it might be interesting to see which urls would fail.

      [Aug 2 19:24:21.165] Server

      {0x7fc5b9a05700}

      DIAG: (ats-speed-vlog) [1.7.30.4-3847] [0802/192421:FATAL:ats_speed.cc(719)] Check failed: ctx->gurl->IsWebValid(). Invalid URL!
      Backtrace:
      /usr/libexec/trafficserver/ats_speed.so(+0x88f8a) [0x7fc5b6e26f8a]
      /usr/libexec/trafficserver/ats_speed.so(+0x7b9d0) [0x7fc5b6e199d0]
      /usr/libexec/trafficserver/ats_speed.so(+0x85fc9) [0x7fc5b6e23fc9]
      /usr/libexec/trafficserver/ats_speed.so(handle_read_request_header(tsapi_httptxn*)+0x49d) [0x7fc5b6e209cd]
      /usr/libexec/trafficserver/ats_speed.so(+0x83218) [0x7fc5b6e21218]
      traffic_server(HttpSM::state_api_callout(int, void*)+0x102) [0x5abee2]
      traffic_server(HttpSM::state_api_callback(int, void*)+0x82) [0x5b0c22]
      traffic_server(TSHttpTxnReenable+0x244) [0x4c8494]
      /usr/libexec/trafficserver/gzip.so(+0x742b) [0x7fc5b765842b]
      traffic_server(HttpSM::state_api_callout(int, void*)+0x102) [0x5abee2]
      traffic_server(HttpSM::set_next_state()+0x1db) [0x5b0efb]
      traffic_server(HttpSM::state_read_client_request_header(int, void*)+0x38f) [0x5a4c9f]
      traffic_server(HttpSM::main_handler(int, void*)+0xbd) [0x5b0a3d]
      traffic_server(HttpSM::state_api_callout(int, void*)+0x2c0) [0x5ac0a0]
      traffic_server(HttpSM::state_add_to_list(int, void*)+0x190) [0x5aca10]
      traffic_server(HttpSM::attach_client_session(HttpClientSession*, IOBufferReader*)+0x38a) [0x5b089a]
      traffic_server(HttpClientSession::new_transaction()+0x9f) [0x58f54f]
      traffic_server(HttpClientSession::state_api_callout(int, void*)+0x1cf) [0x59086f]
      traffic_server(HttpClientSession::new_connection(NetVConnection*, bool, MIOBuffer*, IOBufferReader*)+0x4d9) [0x5914c9]
      traffic_server(HttpSessionAccept::accept(NetVConnection*, MIOBuffer*, IOBufferReader*)+0x203) [0x58bbd3]
      traffic_server(ProtocolProbeTrampoline::ioCompletionEvent(int, void*)+0x3c8) [0x4eb968]
      traffic_server() [0x715ebb]
      traffic_server(NetHandler::mainNetEvent(int, Event*)+0x1f2) [0x709122]
      traffic_server(EThread::execute()+0xad3) [0x737e93]
      traffic_server() [0x7368ca]
      /lib64/libpthread.so.0(+0x7f18) [0x7fc5bd15ff18]
      /lib64/libc.so.6(clone+0x6d) [0x7fc5bc112e9d]
      Aborted

      Attachments

        Activity

          People

            oschaaf Otto van der Schaaf
            oschaaf Otto van der Schaaf
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: