TS-2988: ats_speed: bail out when gurl->IsWebValid() != true

It seems that sometimes a url is received which can't be parsed as
we valid by GoogleUrl(). Just ignore those requests, log them, and
don't ASSERT on those.

This commit also addresses another check failure I encountered in
5.x, seemingly caused by different behaviour compared to 4.x (which
I used previously).