plugins/experimental/ats_speed/ats_speed.cc
@@ -716,40 +716,43 @@ handle_read_request_header(TSHttpTxn txnp) {
  
       ctx->url_string = new GoogleString(url, url_length);
       ctx->gurl = new GoogleUrl(*(ctx->url_string));
-      CHECK(ctx->gurl->IsWebValid()) << "Invalid URL!";
-      const char * method;
-      int method_len;
-      method = TSHttpHdrMethodGet(reqp, hdr_loc, &method_len);
-      bool head_or_get = method == TS_HTTP_METHOD_GET || method == TS_HTTP_METHOD_HEAD;
-      ctx->request_method = method;
-      GoogleString user_agent = get_header(reqp, hdr_loc, "User-Agent");
-      ctx->user_agent = new GoogleString(user_agent);
-      ctx->server_context = ats_process_context->server_context();
-      if (user_agent.find(kModPagespeedSubrequestUserAgent) != user_agent.npos) {
-        ctx->mps_user_agent = true;
-      }
-      if (ats_process_context->server_context()->IsPagespeedResource(gurl)) {
-        if (head_or_get && !ctx->mps_user_agent) { 
+      if (!ctx->gurl->IsWebValid()) {
+        TSDebug("ats-speed", "URL != WebValid(): %s", ctx->url_string->c_str());
+      } else {
+        const char * method;
+        int method_len;
+        method = TSHttpHdrMethodGet(reqp, hdr_loc, &method_len);
+        bool head_or_get = method == TS_HTTP_METHOD_GET || method == TS_HTTP_METHOD_HEAD;
+        ctx->request_method = method;
+        GoogleString user_agent = get_header(reqp, hdr_loc, "User-Agent");
+        ctx->user_agent = new GoogleString(user_agent);
+        ctx->server_context = ats_process_context->server_context();
+        if (user_agent.find(kModPagespeedSubrequestUserAgent) != user_agent.npos) {
+          ctx->mps_user_agent = true;
+        }
+        if (ats_process_context->server_context()->IsPagespeedResource(gurl)) {
+          if (head_or_get && !ctx->mps_user_agent) { 
+            ctx->resource_request = true;
+            TSHttpTxnArgSet(txnp, TXN_INDEX_OWNED_ARG, &TXN_INDEX_OWNED_ARG_UNSET);
+          }
+        } else if (ctx->gurl->PathSansQuery() == "/pagespeed_message"
+                   || ctx->gurl->PathSansQuery() == "/pagespeed_statistics"
+                   || ctx->gurl->PathSansQuery() == "/pagespeed_global_statistics"
+                   || ctx->gurl->PathSansQuery() == "/pagespeed_console"
+                   || ctx->gurl->PathSansLeaf() == "/ats_speed_static/"
+                   || ctx->gurl->PathSansQuery() == "/robots.txt"
+                   ) {
           ctx->resource_request = true;
           TSHttpTxnArgSet(txnp, TXN_INDEX_OWNED_ARG, &TXN_INDEX_OWNED_ARG_UNSET);
         }
-      } else if (ctx->gurl->PathSansQuery() == "/pagespeed_message"
-                 || ctx->gurl->PathSansQuery() == "/pagespeed_statistics"
-                 || ctx->gurl->PathSansQuery() == "/pagespeed_global_statistics"
-                 || ctx->gurl->PathSansQuery() == "/pagespeed_console"
-                 || ctx->gurl->PathSansLeaf() == "/ats_speed_static/"
-                 || ctx->gurl->PathSansQuery() == "/robots.txt"
-                 ) {
-          ctx->resource_request = true;
+        else if (StringCaseEqual(gurl.PathSansQuery() ,"/ats_speed_beacon")) {
+          ctx->beacon_request = true;
           TSHttpTxnArgSet(txnp, TXN_INDEX_OWNED_ARG, &TXN_INDEX_OWNED_ARG_UNSET);
-      }
-      else if (StringCaseEqual(gurl.PathSansQuery() ,"/ats_speed_beacon")) {
-        ctx->beacon_request = true;
-        TSHttpTxnArgSet(txnp, TXN_INDEX_OWNED_ARG, &TXN_INDEX_OWNED_ARG_UNSET);
-        hook_beacon_intercept(txnp);
+          hook_beacon_intercept(txnp);
+        }
       }
       TSfree((void*)url);
-    }
+    } // gurl->IsWebValid() == true
     TSHandleMLocRelease(reqp, TS_NULL_MLOC, hdr_loc);
   } else {
     DCHECK(false) << "Could not get client request header\n";
@@ -868,7 +871,8 @@ transform_plugin(TSCont contp, TSEvent event, void *edata)
       TSHandleMLocRelease(response_header_buf, TS_NULL_MLOC, response_header_loc);    
     }
   }
-  bool ok = !(ctx->resource_request || ctx->beacon_request || ctx->mps_user_agent);
+  bool ok = ctx->gurl->IsWebValid() &&
+            !(ctx->resource_request || ctx->beacon_request || ctx->mps_user_agent);
   if (!ok) {
     TSHttpTxnReenable(txn, TS_EVENT_HTTP_CONTINUE);
     return 0;
